# pynipe

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESIGN.md  INSTALL.md  README.md  pyproject.toml  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml  workflow.yml
examples/: README.md  graph_visualization_example.py  multi_subject_pipeline.py  simple_pipeline.py
src/pynipe/: __init__.py
src/pynipe/core/: __init__.py  context.py  task.py  thread_local.py  workflow.py
src/pynipe/executors/: __init__.py  base.py  local.py  serial.py
src/pynipe/utils/: __init__.py  proxy.py
src/pynipe/visualization/: __init__.py  graph.py
tests/integration/: test_parallel_execution.py  test_simple_workflow.py
tests/unit/core/: test_context.py  test_task.py  test_workflow.py
tests/unit/executors/: test_local.py  test_serial.py
tests/unit/utils/: test_proxy.py
