[project]
name = "pynipe"
version = "0.1.0"
description = "A neuroimaging workflow library that builds upon Nipype's interfaces"
readme = "README.md"
authors = [
    { name = "Andrew Van", email = "andrew.van@turingmedical.com" }
]
requires-python = ">=3.10"
dependencies = [
    "concurrent-log-handler>=0.9.25",
    "networkx>=3.4.2",
    "nipype>=1.10.0",
    "numpy>=2.2.5",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]
visualization = [
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
]
