[project]
name = "pynipe"
# version is now managed by hatch-vcs
dynamic = ["version"]
description = "A neuroimaging workflow library that builds upon Nipype's interfaces"
readme = "README.md"
authors = [
    { name = "Andrew Van", email = "andrew.van@turingmedical.com" }
]
requires-python = ">=3.10"
dependencies = [
    "concurrent-log-handler>=0.9.25",
    "networkx>=3.4.2",
    "nipype>=1.10.0",
    "numpy>=2.2.5",
    "rich>=14.0.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hatch-vcs>=0.3.0",
    "isort>=6.0.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]
visualization = [
    "matplotlib>=3.10.1",
    "plotly>=6.0.1",
]
